updated: fixed learning cards spacing

--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ header+.about {
 
 .learning__cards {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     margin: 0 auto;
     max-width: 1060px;
     column-gap: 20px;
